[fix] heart animation slight overflow

--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -219,7 +219,7 @@
       &:hover {
         &::before {
           // opacity: 1;
-          transform: scale(1);
+          transform: scale(0.9);
         }
       }
     }
