--- a/sass/pages/_menus.scss
+++ b/sass/pages/_menus.scss
@@ -80,7 +80,7 @@
       &:hover {
         &::before {
           // opacity: 1;
-          transform: scale(1);
+          transform: scale(0.9);
         }
       }
     }
